--- a/Proy_Software/Proy_Software.csproj
+++ b/Proy_Software/Proy_Software.csproj
@@ -52,6 +52,12 @@
     <Compile Include="FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmReg_Proveedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmReg_Proveedor.Designer.cs">
+      <DependentUpon>FrmReg_Proveedor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu Principal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmReg_Proveedor.resx">
+      <DependentUpon>FrmReg_Proveedor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu Principal.resx">
       <DependentUpon>Menu Principal.cs</DependentUpon>
